- Fixed bug #49521 (PDO fetchObject sets values before calling constructor)   (patch by Pierrick)